# dupdup

./: .gitignore  CROSSBUILD.md  Cargo.toml  Justfile  LICENSE  PLAN.md  README.md  build.rs  dupdup.html  dupdup.py  index.html  merge.py  zigcxx.sh
docs/: tree-diff-examples.md  tree-diff-jq-cheatsheet.md  tree-diff-playbook.md  tree-diff.md
dupdup-rs/: Cargo.toml  results.json
dupdup-rs/src/: main.rs
schemas/: tree-diff-v1.schema.json
scripts/: package-linux-x86_64-dist.sh
src/: audio.rs  config.rs  diagnostics.rs  diff.rs  engine.rs  file_tools.rs  hard_drive.rs  lib.rs  main.rs  tui.rs  util.rs  web.rs
