[package]
name = "dupdup"
version = "0.4.0"
authors = ["Paul Adenot <paul@paul.cx>"]
description = "Find duplicate files"
documentation = "https://github.com/padenot/dupdup"
homepage = "https://github.com/padenot/dupdup"
repository = "https://github.com/padenot/dupdup"
readme = "README.md"
keywords = ["cli"]
categories = ["command-line-utilities", "filesystem"]
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "1"
blake3 = "1"
byte-unit = "5"
bytesize = "1"
clap = { version = "4", features = ["derive"] }
log = "0.4"
libc = "0.2"
indicatif = "0.17"
open = "5"
rayon = "1.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3.34", features = ["formatting", "macros"] }
tiny_http = "0.12"
walkdir = "2.3"
num_cpus = "1.16"
rusqlite = { version = "0.31", features = ["bundled"] }
ratatui = "0.26"
crossterm = "0.27"
atty = "0.2"
ctrlc = "3.4"
get_if_addrs = "0.5"
trash = "3"
chromaprint = "0.2.0"
lofty = "0.23.3"
symphonia = { version = "0.5.4", features = ["aac", "alac", "flac", "isomp4", "mp1", "mp2", "mp3", "ogg", "pcm", "vorbis", "wav"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }

[dev-dependencies]
jsonschema = "0.46.0"
