[package]
name = "dupdup"
version = "0.1.0"
authors = ["Paul Adenot <paul@paul.cx>"]
description = "Find duplicate file"
documentation = "https://github.com/padenot/dupdup"
homepage = "https://github.com/padenot/dupdup"
repository = "https://github.com/padenot/dupdup"
readme = "../README.md"
keywords = ["cli"]
categories = ["command-line-utilities", "filesystem"]
license = "MIT"

[dependencies]
walkdir = "1"
md5 = "0.3.4"
serde_json = "1.0"
clap = "2.24"
time = "0.1"

