[package]
name = "dupdup"
version = "0.2.2"
authors = ["Paul Adenot <paul@paul.cx>"]
description = "Find duplicate file"
documentation = "https://github.com/padenot/dupdup"
homepage = "https://github.com/padenot/dupdup"
repository = "https://github.com/padenot/dupdup"
readme = "../README.md"
keywords = ["cli"]
categories = ["command-line-utilities", "filesystem"]
license = "MIT"

[dependencies]
walkdir = "2.3"
md5 = "0.3.4"
serde_json = "1.0"
clap = "2.24"
time = "0.1"
chrono = "0.4"
bytesize = "1"
